--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
-* Implement support for '*' module access modifiers.
- - Add a tree structure tracking access at each node
- - Use it for checking access.
-* Merge and generalize Snake and snake drivers.
-  - Reuse it for GameOfLife too.
+* Merge and generalize Snake, snake, and GameOfLife drivers.
+ - Switch Snake, snake, GameOfLife from ncurses to sdl
 * Separate Map from DataMap and EqMap.
 
 Miscellaneous:
+* Improve error message for private module reference access.
+ - Print the paths to source and target at least.
+* Check that FbleLoad doesn't leak memory in error cases.
 * Figure out why GameOfLife is so absurdly slow.
 * Implement less than, div and friends for Int@.
 * Check that types are reported nicely in error messages. I feel like I've
