Reorganize fble apps a little.
* Add Stdio@ type to formalize the stdio interface.
* Rename UI% to App%.
* Rename some other things.
* Test compilation in fble-tests intsead of build.fble.tcl.
* Remove unused obsolete memory.fble.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 App Interface:
 * Define prgms/App.fble with the interface for fble-app.c
+  And prgms/Stdio.fble with the interface for fble-stdio.c?
 * Pass width and height to App and scale up or down as necessary in fble code.
 * Switch Nat@ to Int@ in App interface?
 * Come up with a nicer timer interface for App.
