--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * Remove /Nat%, which should be obsolete by now.
  - Add Mod to /Int%, and switch Primes to use /Int% instead of /Nat%.
+ - Switch App% to use /Int% for drawing instead of /Nat%. Or /Int/Nat%?
 * Clearly define orientation of coordinate system for Draw@ in App%.
 * Pass width and height to App and scale up or down as necessary in fble code.
 * Switch Nat@ to Int@ in App interface?
@@ -24,6 +25,9 @@
   result directly to their parent?
 * Is there a way to clean up compile.c, in terms of orders of setting fields
   of instructions vs scopes vs locals? It all seems very confused to me.
+* It might be nice to have a tool that lists, for each module, all of the
+  modules it directly or indirectly depends on. To help guide when to split up
+  modules or not.
 * Figure out some way to have different types for the same local
   Specifically for implementing poly apply and poly coercions.
 * Is there a way to avoid emitting instructions after a return instruction?
