--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-* Switch from FbleTypeArena to FbleArena for NewLocal and LocalRelease?
+* Increase GameOfLife benchmark time.
+ - To get it back up near to a minute.
 * Remove /Nat%, which should be obsolete by now.
  - Add Mod to /Int%, and switch Primes to use /Int% instead of /Nat%.
  - Switch App% to use Int@ for drawing instead of Nat@. Or IntS@?
