--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-* Pass width and height to App and scale up or down as necessary in fble code.
+* Scale Snake up to fit in the screen better.
+* Scale GameOfLife up to fit in the screen better.
 * Make GameOfLife benchmark go around App instead of around Step?
  - Wait until the App interface settles first though.
 * Add test coverage for the Int routines.
