Implement an AI for snake.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-* [Snake] Implement an AI, use it to drive a Snake benchmark?
+* [Snake] Add a Snake benchmark.
 * [Snake] Figure out why sometimes it leaks memory on exit.
  - Could it be an unconsumed IO value?
 * [Int] Add test coverage for the Int routines.
